Modify applicationId to `com.helplineapp`

--- a/src/android/app/src/main/assets/crashlytics-build.properties
+++ b/src/android/app/src/main/assets/crashlytics-build.properties
@@ -3,9 +3,9 @@
 #
 #Do NOT modify, delete, or commit to source control!
 #
-#Sat Sep 09 19:36:26 IST 2017
+#Mon Sep 11 19:44:21 IST 2017
 version_name=1.0
 package_name=com.helplineapp
-build_id=31d7e642-6c70-48f6-a98b-0cf81d3ded67
+build_id=fb27314a-809a-49f9-9071-6d34da403f02
 version_code=1
-app_name=Emotional Support Helpline Directory
+app_name=Helpline
