--- a/src/android/app/build.gradle
+++ b/src/android/app/build.gradle
@@ -94,7 +94,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.mhtech.in.helplineapp"
+        applicationId "com.helplineapp"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 3
