--- a/src/package.json
+++ b/src/package.json
@@ -10,6 +10,8 @@
     "babel-preset-react-native": "2.1.0",
     "react": "16.0.0-alpha.12",
     "react-native": "0.47.1",
+    "react-native-communications": "^2.2.1",
+    "react-native-contacts": "^2.2.4",
     "react-native-picker": "^4.1.1",
     "react-native-user-avatar": "^1.0.3",
     "react-navigation": "^1.0.0-beta.11"
