--- a/src/android/app/build.gradle
+++ b/src/android/app/build.gradle
@@ -90,27 +90,32 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 28
+    buildToolsVersion "28.0.0"
 
     defaultConfig {
         applicationId "com.helplineapp"
         minSdkVersion 16
-        targetSdkVersion 22
-        versionCode 3
-        versionName "1.02"
+        targetSdkVersion 28
+        versionCode 4
+        versionName "1.03"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
     }
     signingConfigs {
         release {
-            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+            keyAlias 'key0'
+            keyPassword '1234567'
+            storeFile file('../keystore/test_keystore.jks')
+            storePassword '1234567'
+
+            /*if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
                 storeFile file(MYAPP_RELEASE_STORE_FILE)
                 storePassword MYAPP_RELEASE_STORE_PASSWORD
                 keyAlias MYAPP_RELEASE_KEY_ALIAS
                 keyPassword MYAPP_RELEASE_KEY_PASSWORD
-            }
+            }*/
         }
     }
     splits {
@@ -122,7 +127,11 @@ android {
         }
     }
     buildTypes {
+        debug {
+            manifestPlaceholders = [excludeSystemAlertWindowPermission: "false"]
+        }
         release {
+            manifestPlaceholders = [excludeSystemAlertWindowPermission: "true"]
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
@@ -147,7 +156,7 @@ dependencies {
     compile project(':react-native-contacts')
     compile project(':react-native-picker')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:23.0.1"
+    compile 'com.android.support:appcompat-v7:28.0.0'
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
